# openalias-web

./: Cargo.toml  Procfile  README.md
assets/: oa.css
src/: main.rs
templates/: index.hbs  show.hbs
templates/errors/: 404.hbs
