[package]
name = "openalias-web"
version = "0.1.0"
authors = ["Michael Bumann <hello@michaelbumann.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
openalias = "0.2.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "serve"]

[target.heroku]
version = "nightly"
